--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "express": "^4.18.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.4.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   }
 }
