--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.4.0"
   },
+  "engines": {
+    "node": "14.x"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
